--- a/src/views/Recipes/index.astro
+++ b/src/views/Recipes/index.astro
@@ -81,7 +81,7 @@ function normalizeType(r: Recipe): string {
 ---
 <div class="-mt-px -mb-px overflow-hidden bg-white">
   
-  <div class="container mx-auto px-4 mt-0">
+  <div class="container mx-auto px-4 ">
     <div class="pt-4">
       <Breadcrumb bgColor="bg-transparent" textColor="text-primary" hoverColor="hover:text-primary" />
     </div>
