--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -1,5 +1,8 @@
 ---
 import { Image } from 'astro:assets';
+import { getLocale } from '../../../i18n/i18n';
+import esCommon from '../../../locales/es/common.json';
+import enCommon from '../../../locales/en/common.json';
 
 export interface Props {
   title: string;
@@ -15,42 +18,12 @@ export interface Props {
 }
 
 const { title, images } = Astro.props;
+const locale = getLocale(Astro.url.pathname) || 'es';
 
-// Instagram posts con sus imágenes de fallback
-const instagramPosts = [
-  {
-    id: 'post1',
-    postUrl: 'https://www.instagram.com/reel/DTyFbg1ETV-/?igsh=ZXF0ZG44azY4dGVp',
-    embedUrl: 'https://www.instagram.com/reel/DTyFbg1ETV-/embed',
-    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-1.jpg',
-    fallbackImage: '/images/instagram-fallback-1.jpg',
-    alt: 'Yummi Nuts Instagram Post 1'
-  },
-  {
-    id: 'post2',
-    postUrl: 'https://www.instagram.com/reel/DTgz67QCT8M/?igsh=dDBqNGxoaDdya2ht',
-    embedUrl: 'https://www.instagram.com/reel/DTgz67QCT8M/embed',
-    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-2.jpg',
-    fallbackImage: '/images/instagram-fallback-2.jpg',
-    alt: 'Yummi Nuts Instagram Post 2'
-  },
-  {
-    id: 'post3',
-    postUrl: 'https://www.instagram.com/reel/DTbD-fKEcGU/?igsh=MXJseGNwZzR0YXN2cg',
-    embedUrl: 'https://www.instagram.com/reel/DTbD-fKEcGU/embed',
-    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-3.jpg',
-    fallbackImage: '/images/instagram-fallback-3.jpg',
-    alt: 'Yummi Nuts Instagram Post 3'
-  },
-  {
-    id: 'post4',
-    postUrl: 'https://www.instagram.com/reel/DR-IwH6CXvK/?igsh=MWQ5YTFqYXlkeXRnOA',
-    embedUrl: 'https://www.instagram.com/reel/DR-IwH6CXvK/embed',
-    imageUrl: 'https://snack.yummiespromociones.com/yumminuts/instagram-4.jpg',
-    fallbackImage: '/images/instagram-fallback-4.jpg',
-    alt: 'Yummi Nuts Instagram Post 4'
-  },
-];
+// Get Instagram posts from locale
+const instagramPosts = locale === 'es' 
+  ? esCommon.home.socialmedia.instagramPosts
+  : enCommon.home.socialmedia.instagramPosts;
 ---
 
 <div class="box-border flex flex-col gap-12 items-left justify-start container mx-auto  py-0 relative w-full bg-white">
@@ -58,45 +31,17 @@ const instagramPosts = [
     {title}
   </h2>
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6 md:gap-8 w-full">
-    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
-      <iframe
-        src="https://www.instagram.com/reel/DTyFbg1ETV-/embed"
-        class="w-full h-full"
-        allowtransparency="true"
-        allowfullscreen
-        frameborder="0"
-        scrolling="no"
-      ></iframe>
-    </div>
-    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
-      <iframe
-        src="https://www.instagram.com/reel/DTgz67QCT8M/embed"
-        class="w-full h-full"
-        allowtransparency="true"
-        allowfullscreen
-        frameborder="0"
-        scrolling="no"
-      ></iframe>
-    </div>
-    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
-      <iframe
-        src="https://www.instagram.com/reel/DTbD-fKEcGU/embed"
-        class="w-full h-full"
-        allowtransparency="true"
-        allowfullscreen
-        frameborder="0"
-        scrolling="no"
-      ></iframe>
-    </div>
-    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
-      <iframe
-        src="https://www.instagram.com/reel/DR-IwH6CXvK/embed"
-        class="w-full h-full"
-        allowtransparency="true"
-        allowfullscreen
-        frameborder="0"
-        scrolling="no"
-      ></iframe>
-    </div>
+    {instagramPosts.map((post: any) => (
+      <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
+        <iframe
+          src={post.embedUrl}
+          class="w-full h-full"
+          allowtransparency="true"
+          allowfullscreen
+          frameborder="0"
+          scrolling="no"
+        ></iframe>
+      </div>
+    ))}
   </div>
 </div>
