--- a/src/views/Contact/index.astro
+++ b/src/views/Contact/index.astro
@@ -45,6 +45,7 @@ const headerColors = {
 
 <MainLayout title={title} class="bg-white" description={metaDescription} >
   <div class=" w-[100%] mx-auto ">
+        <Breadcrumb bgColor="bg-white" textColor="text-black" hoverColor="hover:text-black" />
     
 
     <!-- Main Contact Section -->
