--- a/src/components/common/Header/index.astro
+++ b/src/components/common/Header/index.astro
@@ -79,7 +79,7 @@ if (headerColors) {
       <div class="logo-container">
         <a href={`/${currentLang}/`} data-astro-reload class="flex-shrink-0">
           <LocalizedImage
-            src={logosData.principal.url}
+            src="https://snack.yummiespromociones.com/SnacksyummiesAssets/YNUTS_LOGO1_BLANCO.webp"
             alt={logosData.principal.alt || "Yummi Nuts Logo"}
             class="h-12 w-auto object-contain"
             loading="eager"
