--- a/src/components/common/MobileMenu/index.astro
+++ b/src/components/common/MobileMenu/index.astro
@@ -28,7 +28,7 @@ const closeMenuLabel = t('menu_labels.close_main_menu', { namespace: 'common', l
   <div class="container mx-auto px-4 py-8">
     <div class="flex justify-between items-center mb-8">
       <a href={`/${currentLang}/`} class="block">
-        <img src={logos.principal.url} alt={logos.principal.alt} class="h-10 w-auto" />
+        <img src="https://snack.yummiespromociones.com/SnacksyummiesAssets/YNUTS_LOGO1_BLANCO.webp" alt={logos.principal.alt} class="h-10 w-auto" />
       </a>
       <button id="mobile-menu-close" type="button" class="text-white">
         <span class="sr-only">{closeMenuLabel}</span>
