fix: yummies one redirect

--- a/src/components/common/Footer/index.astro
+++ b/src/components/common/Footer/index.astro
@@ -66,7 +66,7 @@ function langPath(routeId: string): string {
             </p>
           </div>
           <div class="mt-4 w-full sm:w-auto">
-            <a href="https://snacksyummies.com/yummiesone" target="_blank" rel="noopener noreferrer" 
+            <a href="https://snacksyummies.com/es/yummiesone" target="_blank" rel="noopener noreferrer" 
                class="inline-block hover:underline hover:text-blue py-3 px-4 bg-[#A1C8EA] text-primary rounded text-center w-full sm:w-auto">
               {currentLang === 'es' ? 'Registrate en Yummies One' : 'Register in YummiesOne'}
             </a>
